--- a/erp_frontend/index.html
+++ b/erp_frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/stockhub.png" />
+    <link rel="icon" type="image/svg+xml" href="/stockhub_logo_only_nobg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StockHub</title>
   </head>
